--- a/acc-sj/f/login/index.html
+++ b/acc-sj/f/login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login - Proses WH</title>
+    <title>Login - ACC SJ Offline Tahap Awal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -42,7 +42,7 @@
           <i class="bi bi-box-seam text-white text-3xl"></i>
         </div>
         <h1 class="text-3xl font-bold bg-gradient-to-r from-gray-800 to-gray-600 bg-clip-text text-transparent mb-2">
-          Proses WH
+          ACC SJ Offline Tahap Awal
         </h1>
         <p class="text-gray-600 text-sm">Sistem Manajemen Warehouse</p>
       </header>
