--- a/acc-sj/index.html
+++ b/acc-sj/index.html
@@ -922,7 +922,7 @@ function dashboardRender() {
   // jika kosong
   if (arr.length === 0) {
     $('#detailContent').html(`
-      <h1 class="text-xl font-semibold mb-2">Log Aktivitas / History</h1>
+      <h1 class="text-4xl text-center font-mono font-semibold mb-2 text-blue-800">Log Aktivitas / History</h1>
       <hr class="mb-4">
       ${header}
       <div class="p-4 text-center text-gray-500">Tidak ditemukan data log.</div>
@@ -945,7 +945,7 @@ function dashboardRender() {
 
   // render ke html
   $('#detailContent').html(`
-    <h1 class="text-xl font-semibold mb-2">Log Aktivitas / History</h1>
+    <h1 class="text-4xl text-center font-mono font-semibold mb-2 text-blue-800">Log Aktivitas / History</h1>
     <hr class="mb-4">
     <div class="space-y-1">
       ${header}
