--- a/acc-sj/index.html
+++ b/acc-sj/index.html
@@ -350,23 +350,23 @@
             'summary-item rounded-full p-0 ps-2 my-1 cursor-pointer bg-white hover:bg-blue-200 transition-colors duration-200 me-2 border-2 border-transparent';
           listItem.dataset.idSj = item.id_sj;
           listItem.innerHTML = `
-										<div class="flex items-center w-full gap-3">
+										<div class="flex items-center w-full gap-1">
 												<span class="w-[18%] rounded-lg mr-1 font-medium text-gray-700">${
                           item.stamp_sj_min || '-'
                         }</span>
-												<div class="w-[22%] flex justify-between items-center">
+												<div class="w-[24%] flex justify-between items-center">
 														<span>${item.id_sj}</span>
 														<span class="font-bold">${item.count}</span>
 												</div>
 												<div class="flex items-center w-[36%]">
 														<span class="ml-1">${item.mkt_name || '-'}</span>
 												</div>
-                        <div class="w-[12%]">
+                        <div class="w-[11%]">
                           <i class="bi bi-circle-fill"
                             style="color:${item.status==0?'#3b82f6':item.status==1?'#22c55e':item.status==2?'#eab308':item.status==3?'#ef4444':'#6b7280'};font-size:1.5em;"
                             title="Status ${item.status}"></i>
                         </div>
-                        <div class="flex items-center gap-1 w-[12%]">
+                        <div class="flex items-center gap-1 w-[11%]">
                           ${item.status==0 ? `
                             <button class="rounded-full w-[32px] h-[32px] bg-blue-600 text-white font-medium py-0 px-0 rounded-lg shadow-md hover:bg-blue-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2">
                               <i class="bi bi-check-circle-fill"></i>
@@ -835,11 +835,23 @@
             return 0;
           });
 
-          // Simpan data asli dan filtered
-          originalSummaryData = summaryArray;
-          filteredSummaryData = [...summaryArray];
+          // Filter data: hanya status 0 dan 1 yang ditampilkan
 
-          renderSummaryList(summaryArray);
+          // Filter data: hanya status 0 dan 1 yang ditampilkan
+
+                    // Filter data: tampilkan semua status kecuali 3
+                    let filteredSummaryArray = summaryArray.filter(item => item.status !== 3);
+                    // Urutkan: status ASC, lalu stamp_sj_min ASC
+                    filteredSummaryArray = filteredSummaryArray.sort((a, b) => {
+                      if (a.status !== b.status) return a.status - b.status;
+                      if (a.stamp_sj_min < b.stamp_sj_min) return -1;
+                      if (a.stamp_sj_min > b.stamp_sj_min) return 1;
+                      return 0;
+                    });
+                    originalSummaryData = filteredSummaryArray;
+                    filteredSummaryData = [...filteredSummaryArray];
+
+                    renderSummaryList(filteredSummaryArray);
 
           // Kembali ke tampilan dashboard setelah data dimuat
           showDashboard();
@@ -1242,8 +1254,11 @@ fbsSvc1.gDtOn(`log-acc-awal-mgr/${stm('t')}`,(d)=>{
               originalSummaryData = originalSummaryData.filter(item => item.id_sj !== idSj);
               filteredSummaryData = filteredSummaryData.filter(item => item.id_sj !== idSj);
               renderSummaryList(filteredSummaryData);
-              // Jika SJ yang di-ACC adalah yang sedang aktif, kembali ke dashboard
               showDashboard();
+              // Reload data baru setelah acc
+              if (typeof fetchAndRender === 'function') {
+                setTimeout(() => { fetchAndRender(); }, 500);
+              }
             }
           },
           (error) => {
@@ -1327,9 +1342,12 @@ fbsSvc1.gDtOn(`log-acc-awal-mgr/${stm('t')}`,(d)=>{
               originalSummaryData = originalSummaryData.filter(item => item.id_sj !== idSj);
               filteredSummaryData = filteredSummaryData.filter(item => item.id_sj !== idSj);
               renderSummaryList(filteredSummaryData);
-              // Jika SJ yang di-ACC adalah yang sedang aktif, kembali ke dashboard
               if (window.currentIdSj === idSj) {
                 showDashboard();
+              }
+              // Reload data baru setelah acc
+              if (typeof fetchAndRender === 'function') {
+                setTimeout(() => { fetchAndRender(); }, 500);
               }
             }
           },
