--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -308,7 +308,8 @@
           <button
             id="tambah-stock-btn"
             onclick="modalStockLainya('tambah')"
-            class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-600 hover:bg-green-100 hover:text-green-600 active:scale-95 shadow text-sm"
+            class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-400 cursor-not-allowed opacity-60 text-sm"
+            disabled
           >
             <i class="bi bi-plus-circle text-base"></i>
             <span>Tambah</span>
