--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -996,6 +996,7 @@ function activateCard(idSj) {
 
   // Ambil data
   tempData = cariByIdSj(idSj);
+  console.log(tempData);
 
   // Reset highlight
   document.querySelectorAll("#summary > div").forEach((el) => {
